# $Id$

Revision history for XML::Feed

0.43  
    - Add optional multi enclosure support

0.42
    - Fix conversion of multi value fields
      http://rt.cpan.org/Ticket/Display.html?id=41794 
      (Mario Domgoergen)

    - Fixed a bug where $e->category fails when XML::RSS::LibXML is preferred.
      (Tatsuhiko Miyagawa)
    - Added support for enclosures

0.41
    - Add handling for multiple categories/tags, including
      patch from Shlomi Fish (SHLOMIF)
      http://rt.cpan.org/Ticket/Display.html?id=41396
    - Force v1.40 of XML::RSS to get proper multiple category support

0.40 
    - Force v1.37 of XML::RSS to get proper xml:base support
    - Force v0.32 of XML::Atom to fix 
      http://rt.cpan.org/Ticket/Display.html?id=40766
      (Thanks to David Brownlee for the help in fixing)
    - Add support for format() in Entry

0.3 2008-11-04
    - Allow more flexible identification of Formats
      https://rt.cpan.org/Ticket/Display.html?id=14725
      (Brian Cassidy BRICAS)
  
0.23 2008-10-23
    - Fix mixing and matching of RSS and Atom
      http://rt.cpan.org/Ticket/Display.html?id=21335
      (Shlomi Fish SHLOMIF)
    - Note that multiple categories was fixed at some point
      http://rt.cpan.org/Ticket/Display.html?id=30234
      (mattn)
    - Work with xml:base (depending on version of XML::RSS)
      http://rt.cpan.org/Ticket/Display.html?id=21135
      http://bugs.debian.org/381359
      (Gregor Herrmann and Joey Hess)

0.22 2008-10-22
    - Correct namespace for terms in RSS
      http://rt.cpan.org/Ticket/Display.html?id=25393
      (Kent Cowgill KCOWGILL)
    - Up the minimum requirement for XML::RSS to 1.31
      http://rt.cpan.org/Ticket/Display.html?id=23588
      (Andreas König ANDK)    
    - Created test for
      http://rt.cpan.org/Ticket/Display.html?id=18810
      (Ryan Tate)
    - Allow creation of a self link
      http://rt.cpan.org/Ticket/Display.html?id=39924
      (Shlomi Fish SHLOMIF)
    - Add support for GEORSS